# CloudConfigurationHarness-Microsoft

./: .gitignore  README.md  pyproject.toml
.claude/skills/archive-retrieve/: SKILL.md
.claude/skills/archive-url/: SKILL.md
.claude/skills/autonomous-work/: SKILL.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/dispatching-parallel-agents/: SKILL.md
.claude/skills/executing-plans/: SKILL.md
.claude/skills/feature-backlog/: SKILL.md
.claude/skills/finishing-a-development-branch/: SKILL.md
.claude/skills/gh-release/: SKILL.md
.claude/skills/network-capture/: SKILL.md
.claude/skills/packet-capture/: SKILL.md
.claude/skills/pdf/: SKILL.md  forms.md  reference.md
.claude/skills/repo-init/: SKILL.md
docs/: onboarding-new-resource-type.md  operating-tiers.md
docs/patterns/: README.md  deterministic-check-id-assignment.md  rego-rule-authoring.md  schema-coverage-discovery.md
docs/plans/: 2026-07-02-tier-2-pattern-checks.md
docs/status/: 2026-07-01-status.md  2026-07-02-status.md
docs/task-runs/: 2026-07-01-az-stor-003-ab-comparison.md  2026-07-01-az-stor-004-ab-comparison.md
harness/adapters/: bicep_validate.py  rego_validate.py
harness/engine/: compare_runs.py  handlers.py  preflight.py  roles.yaml  runner.py
harness/journal/: db.py  schema.sql
harness/tools/: bootstrap_resource_type.py  coverage_status.py  enumerate_schema_properties.py  regression_check.py  run_hypothesis_buildout.py  run_schema_coverage.py
harness/workflows/: _smoke_test.yaml  keyvault-atomic-tier.yaml  storage-atomic-tier.yaml  storage-pattern-tier.yaml
(+309 files in other folders)
