[project]
name = "cloud-configuration-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
exclude = [".claude/skills"]  # vendored reference material, not code this project maintains

[tool.pyright]
include = ["harness"]
